<resources>
    <string name="app_name" translatable="false">LordOfTheGames</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="image_of_game" translatable="false">Image of the game</string>
    <string name="game_title" translatable="false">Game title</string>
    <string name="long_text" translatable="false">DESCRIZIONE DELLO GIUOCO molto molto molto lunga perchè non sia mai che non provo a scrivere talemente gcevfbpwvb fgwhcgvwcbpw9 ouwq gv cbnjp9woucvk bwen uun vweknfh kwunwkuf nwef vnwf wenf wjfnadkuvjcb aeujh vcabsnlci unawe vbchwjv bna ub ujwvcisavy jcuknec vaknwce javwkbnclhiauwjvbnaluc vbaeli cuvsbcnhsauyvbnhlwejayv cbarkcu vabchkuaewvbnasuagcv ncg vncligv kncl uavsubcis uc us niav cksh vjuknil sgjhbc nseuvnasci vn evcnisa ghna cuhvaneicjvsbcnismjbnsaelikc hvbnaeic hgvsaneicjm vseacijsgve cnihcg vbsakcjm vasnkumavsckumavscniasjvcg bnli jcj tanta roba da far impaazire tutto il layout, nooo non sia mai</string>
    <string name="long_title" translatable="false">un nome abbastanza lungo da poter testare il layout</string>
    <string name="immagine" translatable="false">immagine</string>
    <string name="belandih" translatable="false">BELANDIH</string>
    <string name="besughi" translatable="false">BESUGHI</string>
    <string name="home" translatable="false">Home</string>
    <string name="community" translatable="false">Community</string>
    <string name="my_game" translatable="false">My game</string>
    <string name="completed">Completed</string>
    <string name="all">All</string>
    <string name="plan_to_play">Wanted to play</string>
    <string name="dropped">Dropped</string>
    <string name="playing">Playing</string>
    <string name="abandoned">Abandoned</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="notes">Notes</string>
    <string name="log_in">Log-in</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="sign_in">Sign-in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="nickname">Nickname</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create account</string>
    <string name="registrati_e_combatti">Registrati e combatti!</string>
    <string name="torna_a_combattere">Torna a combattere!</string>
    <string name="mostra_il_tuo_valore">Mostra il tuo valore</string>
    <string name="notification">Notification</string>
    <string name="giochi_in_lista">Giochi in lista:</string>
    <string name="giochi_completati">Giochi completati:</string>
</resources>