<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".GameDetails.GameDetActivity">




<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/game_description"
        app:layout_constraintTop_toTopOf="@+id/game_description">

        <ImageButton
            android:id="@+id/add_to_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/belandih"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_videogame_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.2" />

        <ImageView
            android:id="@+id/selectedImage"
            android:layout_width="230dp"
            android:layout_height="250dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/game_title"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@id/description_short"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_short"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:ems="3"
            android:gravity="clip_vertical"
            android:lines="15"
            android:text="@string/long_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selectedImage"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteY="120dp" />


        <TextView
            android:id="@+id/category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/belandih"
            app:layout_constraintTop_toBottomOf="@id/description_short" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_game_details_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_title"
            tools:listitem="@layout/category_element" />


        <TextView
            android:id="@+id/platform_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/belandih"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_game_details_category" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_game_details_platform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/game_description"
            app:layout_constraintTop_toBottomOf="@id/platform_title"
            tools:listitem="@layout/platform_item" />
        <!--
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
        <TextView
            android:id="@+id/game_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/long_text"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.918"
            app:layout_constraintStart_toEndOf="@id/selectedImage"
            app:layout_constraintTop_toBottomOf="@id/recycler_view_game_details_platform"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/label_achievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/belandih"
            app:layout_constraintTop_toBottomOf="@id/game_description" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_game_details_achievement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_achievement"
            tools:listitem="@layout/achievement_list_item" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

    <FrameLayout
        android:id="@+id/achievement_edit"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_weight=".70"
        android:layout_gravity="center"
        android:background="@drawable/rainbow">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <ImageView
                android:id="@+id/achievement_image_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/yo_listen_foreground"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/achievement_title_edit" />

            <TextView
                android:id="@+id/achievement_title_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Nome achievement"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/achievement_description_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Descrizione achievement"
                android:ems="17"
                android:singleLine="false"
                app:layout_constraintStart_toEndOf="@id/achievement_image_edit"
                app:layout_constraintTop_toBottomOf="@id/achievement_title_edit" />

            <!--NumberPicker
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/achievement_max_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_image_edit" /-->

            <EditText
                android:id="@+id/numberPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:hint="0"
                app:layout_constraintEnd_toStartOf="@+id/achievement_max_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/achievement_image_edit" />

            <TextView
                android:id="@+id/achievement_max_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="190dp"
                android:text="/?"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numberPicker"
                app:layout_constraintTop_toBottomOf="@+id/achievement_image_edit" />

            <Button
                android:id="@+id/btn_salva1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Salva"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_annulla1"
                app:layout_constraintBottom_toBottomOf="parent"
                />


            <Button
                android:id="@+id/btn_annulla1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Annulla"
                app:layout_constraintEnd_toStartOf="@id/btn_salva1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
